# m3sb

./: README.md  experiments.ipynb  pyproject.toml  requirements.txt
experiment-results/ex1/: ex1b_results.csv
experiment-results/ex2/: ex2_results.csv
experiment-results/ex3/: ex3a_results.csv  ex3b_results.csv
experiment-results/ex4/: ex4a_results.csv  ex4b_results.csv  ex4c_results.csv
experiment-results/ex5/: ex5a_results.csv
experiment-results/ex6/: ex6_results.csv
experiment-results/ex7/: ex7a_results.csv  ex7b_results.csv
experiment_configs/: config.json
src/m3sb/: __init__.py  data.py  eval.py  experiment.py  geometry.py  merging.py  plotting.py  utils.py
