[project]
name = "m3sb"
version = "0.1.0"
description = "A generalization of SLERP-based model merging for two or more models."
readme = "README.md"
authors = [
    { name = "Mehdi Amlal", email = "amlal.2199248@studenti.uniroma1.it" }
]
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "pillow>=11.3.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.0",
]

[project.scripts]
m3sb = "m3sb:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
